# rustpython-bug

./: .gitignore  Cargo.toml  README.md  justfile
src/: lib.rs
www/: index.html  index.js  rustpython_bug.js
