[package]
name = "rustpython-bug"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.80"

[dependencies.rustpython]
git = "https://ghproxy.com/https://github.com/RustPython/RustPython"
default-features = false
features = ["freeze-stdlib", "stdlib"]

[dependencies.rustpython-vm]
git = "https://ghproxy.com/https://github.com/RustPython/RustPython"
